# agentic-llm-evals

./: README.md  pyproject.toml  requirements.txt
config/: prompts.py  settings.py
custom_envs/: medical_clerk.py
data/suites/medical_clerk/: environment.yaml  injection_vectors.yaml
medical_clerk_benchmark/: benchmark.py
medical_clerk_benchmark/suites/medical_clerk/: injection_tasks.py  task_suite.py
scripts/: analyze_and_notify.py  create_databases.py  create_finetuning_data.py  minimal_benchmark.py  run_benchmark.py  run_benchmark.slurm  run_minimal_benchmark.slurm
src/medical_clerk_benchmark/: benchmark.py
src/medical_clerk_benchmark/suites/medical_clerk/: injection_tasks.py  task_suite.py  user_tasks.py
