# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical_clerk_benchmark"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A benchmark for evaluating medical clerk LLM agents."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

[options]
packages = ["medical_clerk_benchmark"]