[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical_clerk_benchmark"
version = "0.1.0"
authors = [
  { name="Memo Ozdincer", email="memo@cs.toronto.edu" },
]
description = "A benchmark for evaluating medical clerk LLM agents."
requires-python = ">=3.9"

# V3 Change: This new section tells setuptools how to find the package
[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the 'src' directory